[tool.poetry]
name = "mountain-car"
version = "0.1.0"
description = "Solution to Mountain Car from https://gym.openai.com/"
authors = ["Tom Artiom Fiodorov <a.fiodorov@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
gym = "^0.15.4"
keras = "^2.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8-isort = "^2.7"
mypy = "^0.740.0"

[tool.black]
line-length = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

